--- a/EcoFit/app/src/main/res/values/themes.xml
+++ b/EcoFit/app/src/main/res/values/themes.xml
@@ -2,8 +2,14 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.EcoFit" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/black</item>
+<!--        <item name="colorPrimary">@color/cardview_dark_background</item>-->
+        <item name="android:popupTheme">@style/AppTheme.PopupOverlay</item>
+
     </style>
 
     <style name="Theme.EcoFit" parent="Base.Theme.EcoFit" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+        <!-- Другие цвета для ночного режима -->
+
 </resources>
